--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         
         <div class="content">
             <div class="form-group">
-                <label>Km retirada até destino:</label>
+                <label>Km - Da retirada até o destino:</label>
                 <input type="number" id="kmTotal" value="1000" step="0.01">
             </div>
 
@@ -328,4 +328,5 @@
         calcular();
     </script>
 </body>
+
 </html>
